# forecast

./: .gitignore  Cargo.toml  README.md  cargo-sources.json  com.jwestall.Forecast.json  justfile
.github/: FUNDING.yml
i18n/bg/: cosmic_ext_forecast.ftl
i18n/cs/: cosmic_ext_forecast.ftl
i18n/en/: cosmic_ext_forecast.ftl  cosmic_ext_weather.ftl  cosmic_weather.ftl
i18n/hi/: cosmic_ext_forecast.ftl
i18n/hu/: cosmic_ext_forecast.ftl
i18n/kn/: cosmic_ext_forecast.ftl
i18n/nl/: cosmic_ext_forecast.ftl
i18n/pl/: cosmic_ext_forecast.ftl
i18n/pt-BR/: cosmic_ext_forecast.ftl
i18n/ro/: cosmic_ext_forecast.ftl
i18n/sv/: cosmic_ext_forecast.ftl
i18n/zh-CN/: cosmic_ext_forecast.ftl
res/: com.jwestall.Forecast.desktop  com.jwestall.Forecast.metainfo.xml  com.jwestall.Weather.desktop  com.jwestall.Weather.metainfo.xml
res/icons/: com.jwestall.CosmicWeather.desktop  com.jwestall.CosmicWeather.metainfo.xml
src/: app.rs  config.rs  daily_view.rs  detail_view.rs  error.rs  hourly_view.rs  icon_cache.rs  key_bind.rs  localize.rs  location.rs  main.rs  menu.rs  weather.rs
src/app/: config.rs  icon_cache.rs  localize.rs  menu.rs  settings.rs
src/model/: location.rs  weather.rs
src/views/: daily.rs  detail.rs  hourly.rs  mod.rs
