[package]
name = "cosmic-ext-forecast"
version = "1.1.0"
edition = "2021"

[dependencies]
log = "0.4.21"
open = "5.1.2"
serde = "1.0.197"
# Internationalization
i18n-embed = { version = "0.15.0", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.9.1"
rust-embed = "8"
reqwest = { version = "0.12.3", features = ["json", "gzip", "deflate"] }
tokio = { version = "1.37.0", features = ["fs"] }
chrono = { version = "0.4.38", features = ["serde"] }
bytes = "1.7.1"
include_dir = "0.7.4"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = ["debug", "winit", "tokio", "image"]

[build-dependencies]
vergen = { version = "8", features = ["git", "gitcl"] }

[features]
default = ["wgpu"]
wgpu = ["libcosmic/wgpu"]
