[package]
name = "cosmic-ext-forecast"
version = "1.3.0"
edition = "2021"

[dependencies]
log = "0.4.21"
open = "5.1.2"
serde = "1.0.197"
bytes = "1.7.1"
include_dir = "0.7.4"
i18n-embed-fl = "0.10.0"
rust-embed = "8"
public-ip-address = { version = "0.3.5", features = ["blocking"] }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic"
default-features = false
features = [
    "debug",
    "winit",
    "wgpu",
    "tokio",
    "desktop",
    "about",
    "wayland",
    "multi-window",
    "surface-message",
]

[dependencies.i18n-embed]
version = "0.16.0"
features = ["fluent-system", "desktop-requester"]

[dependencies.reqwest]
version = "0.12.3"
features = ["json", "gzip", "deflate"]

[dependencies.tokio]
version = "1.37.0"
features = ["fs"]

[dependencies.chrono]
version = "0.4.38"
features = ["serde"]
